4.17/83df2d4ed559442cdb5a1364c69aef3e682dceb0
drm/omap: fix compile error when debugfs is disabled

When compiling with CONFIG_OMAP2_DSS_DEBUGFS disabled, build fails due
to:

drivers/gpu/drm/omapdrm/dss/dss.c:1474:10: error: ‘dss_debug_dump_clocks’ undeclared (first use in this function); did you mean ‘dispc_dump_clocks’?
          dss_debug_dump_clocks, dss);
          ^~~~~~~~~~~~~~~~~~~~~
          dispc_dump_clocks

Fix this by moving the required functions outside #if
defined(CONFIG_OMAP2_DSS_DEBUGFS).

In the long term, we perhaps want to try to get all the debugfs support
left out if debugfs is not enabled.

Signed-off-by: Tomi Valkeinen <tomi.valkeinen@ti.com>

